--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "movies-explorer-api",
   "version": "1.0.0",
-  "description": "[![Tests](../../actions/workflows/tests-13-sprint.yml/badge.svg)](../../actions/workflows/tests-13-sprint.yml) [![Tests](../../actions/workflows/tests-14-sprint.yml/badge.svg)](../../actions/workflows/tests-14-sprint.yml) # Проект Mesto фронтенд + бэкенд",
+  "description": " Дипломный проект Movies бэкенд",
   "main": "index.js",
   "scripts": {
     "lint": "npx eslint .",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/ViktoryPolischuk/express-mesto-gha.git"
+    "url": "git+ssh://git@github.com/ViktoryPolischuk/movies-explorer-api.git"
   },
   "author": "Viktoria Polischuk",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ViktoryPolischuk/express-mesto-gha/issues"
+    "url": "https://github.com/ViktoryPolischuk/movies-explorer-api/issues"
   },
-  "homepage": "https://github.com/ViktoryPolischuk/express-mesto-gha#readme",
+  "homepage": "https://github.com/ViktoryPolischuk/movies-explorer-api#readme",
   "devDependencies": {
     "eslint": "^8.43.0",
     "eslint-config-airbnb-base": "^15.0.0",
